--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,12 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  animations: ^2.0.11
+  cached_network_image: ^3.4.1
   flutter:
     sdk: flutter
-  go_router: ^15.1.2
+  go_router: ^15.1.2 
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
