--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,12 @@ environment:
 dependencies:
   animations: ^2.0.11
   cached_network_image: ^3.4.1
+  firebase_auth: ^5.5.4
+  firebase_core: ^3.13.1
   flutter:
     sdk: flutter
   go_router: ^15.1.2 
+  google_sign_in: ^6.3.0
   http: ^1.4.0
   shimmer: ^3.0.0
 
@@ -25,3 +28,4 @@ flutter:
   
   assets:
     - assets/category/
+    - assets/logo/
