--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,15 @@ environment:
 
 dependencies:
   animations: ^2.0.11
+  awesome_snackbar_content: ^0.1.6
   cached_network_image: ^3.4.1
   firebase_auth: ^5.5.4
   firebase_core: ^3.13.1
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.8.0
   go_router: ^15.1.2 
+  google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
   http: ^1.4.0
   shimmer: ^3.0.0
