--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
   http: ^1.4.0
+  lottie: ^3.3.1
   shimmer: ^3.0.0
 
 dev_dependencies:
@@ -32,3 +33,4 @@ flutter:
   assets:
     - assets/category/
     - assets/logo/
+    - assets/lottie/
