--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.13.1
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
   font_awesome_flutter: ^10.8.0
   go_router: ^15.1.2 
   google_fonts: ^6.2.1
@@ -27,6 +28,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter_launcher_icons: 
+  android: true 
+  ios: true
+  image_path: "assets/logo/icon.png"
 flutter:
   uses-material-design: true  
   
