--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^1.4.0
   introduction_screen: ^3.1.17
   lottie: ^3.3.1
+  modal_bottom_sheet: ^3.0.0
   shared_preferences: ^2.3.0
   shimmer: ^3.0.0
 
