--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.6
+  flutter_rating: ^2.0.2
   font_awesome_flutter: ^10.8.0
   go_router: ^15.1.2 
   google_fonts: ^6.2.1
