--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
   http: ^1.4.0
+  intl: ^0.19.0
   introduction_screen: ^3.1.17
   lottie: ^3.3.1
   modal_bottom_sheet: ^3.0.0
